Fix form validation bubble positioning at hidpi.

Since use-zoom-for-dsf launched, when Blink converts to screen
coordinates it needs to take the device scale factor into account.
Normally it would do this by calling viewportToScreen or a similar
function. However, because the validation bubble anchor is in viewport
coordinates instead of screen coordinates, the positioning code needs to
use device scale factor explicitly.

The reason we can't just convert the anchor to screen coordinates in
Blink is because the same anchor is used for cocoa. It needs to y-flip
the anchor for OSX and converting to screen coordinates too early messes
up that calculation.

BUG=660840

Review-Url: https://codereview.chromium.org/2491113002
Cr-Commit-Position: refs/heads/master@{#433349}

Former-commit-id: 5debc705a0b892bd2dcf82ec7672147268083957